libzapi version 1.2.2 (beta), released on 2011/04/xx
====================================================

Changes
-------

* In zframe class, added print, reset, strdup, streq, strhex, dup methods.

* In zmsg class, added last, wrap, unwrap, popstr, pushstr, addstr, dup 
  methods.

* In zclock class, added log method.

* In zstr class, added sendm method.

* Added Valgrind suppression file for libzmq.

Bug Fixes
---------

* Fixed error in thread pipe handling which sometimes provoked libzmq
  assertion failure at shutdown. 
  
* Fixed build for Windows.


libzapi version 1.2.1 (beta), released on 2011/04/01
====================================================

Changes
-------

* Rewrote zctx class, which was wrongly working with sockets in two
  threads. Much simpler, and properly stable now.

* Project renamed to 'libzapi' for consistency with 'libzmq'.

* Expanded main documentation page significantly.


zapi version 1.2.0 (beta), released on 2011/03/24
=================================================

Changes
-------

* Added zclock class for portable millisecond timers and delays.

* Expanded documentation significantly.


zapi version 1.1.0 (beta), released on 2011/03/23
=================================================

Changes
-------

* Added zctx_thread_new method to create child threads with a PAIR pipe
  to talk to them.

* Made zapi threadsafe, specifically multiple threads can share the same
  context and thus talk to each other.


zapi version 1.0.0 (beta), released on 2011/03/22
=================================================

Changes
-------

* Initial version of library finished, tested, documented, and packaged.

